--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-dom": "18.0.11",
     "antd": "^5.4.2",
     "autoprefixer": "10.4.14",
-    "contentful": "^10.0.0",
+    "contentful": "10.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -28,8 +28,13 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "safe-json-stringify": "^1.2.0",
     "sass": "^1.62.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/safe-json-stringify": "^1.1.2"
   }
 }
