--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "expose": "lt --port 3000",
-    "dev:local": "next dev",
-    "dev": "concurrently \"npm run dev:local\" \"npm run expose\"",
+    "dev": "next dev",
+    "dev:expose": "concurrently \"npm run dev:local\" \"npm run expose\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.11",
     "antd": "^5.4.2",
     "autoprefixer": "10.4.14",
+    "chroma-js": "^2.4.2",
     "contentful": "10.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -38,6 +39,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/chroma-js": "^2.4.0",
     "@types/safe-json-stringify": "^1.1.2",
     "concurrently": "^8.0.1",
     "localtunnel": "^2.0.2"
