--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/chroma-js": "^2.4.0",
     "@types/safe-json-stringify": "^1.1.2",
     "concurrently": "^8.0.1",
+    "husky": "^8.0.3",
     "localtunnel": "^2.0.2"
   }
 }
