--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:expose": "concurrently \"npm run dev:local\" \"npm run expose\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -39,10 +40,17 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/chroma-js": "^2.4.0",
+    "@types/jest": "^29.5.1",
     "@types/safe-json-stringify": "^1.1.2",
+    "babel-jest": "^29.5.0",
     "concurrently": "^8.0.1",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "localtunnel": "^2.0.2"
   }
 }
