--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,8 +109,5 @@ jobs:
       - name: Test
         run: npm run test
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
