--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Run Linter
         run: npm run lint
 
+      - name: Generate Lint reports
+        run: npm run lint:report
+
   build:
     runs-on: ubuntu-latest
     env:
