--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/chroma-js": "^2.4.0",
     "@types/jest": "^29.5.1",
     "@types/safe-json-stringify": "^1.1.2",
+    "@types/testing-library__react": "^10.2.0",
     "babel-jest": "^29.5.0",
     "concurrently": "^8.0.1",
     "husky": "^8.0.3",
