--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "classnames": "^2.3.2",
     "contentful": "10.1.0",
     "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.21",
@@ -48,6 +50,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/chroma-js": "^2.4.0",
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.194",
     "@types/safe-json-stringify": "^1.1.2",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
