--- a/package.json
+++ b/package.json
@@ -52,10 +52,15 @@
     "@types/testing-library__react": "^10.2.0",
     "babel-jest": "^29.5.0",
     "concurrently": "^8.0.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "localtunnel": "^2.0.2"
+    "localtunnel": "^2.0.2",
+    "prettier": "^2.8.8"
   }
 }
