--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "classnames": "^2.3.2",
     "contentful": "10.1.0",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.21",
@@ -50,12 +49,16 @@
     "@types/jest": "^29.5.1",
     "@types/safe-json-stringify": "^1.1.2",
     "@types/testing-library__react": "^10.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "babel-jest": "^29.5.0",
     "concurrently": "^8.0.1",
+    "eslint-config-next": "^13.4.2",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-security": "^1.7.1",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
