--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:expose": "concurrently \"npm run dev:local\" \"npm run expose\"",
     "build": "next build",
     "start": "next start",
+    "lint:scss": "stylelint 'src/**/*.scss'",
     "lint": "next lint",
     "lint:report": "eslint . --format json -o eslint-report.json",
     "test": "jest",
@@ -64,6 +65,14 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "localtunnel": "^2.0.2",
-    "prettier": "^2.8.8"
+    "postcss-scss": "^4.0.6",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.6.2",
+    "stylelint-config-css-modules": "^4.2.0",
+    "stylelint-config-recommended-scss": "^11.0.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^5.0.0"
   }
 }
