--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
     "order/properties-alphabetical-order": true,
     "selector-max-specificity": "0,4,0",
     "selector-class-pattern": "^[a-zA-Z0-9]*$",
-    "scss/at-mixin-pattern": "^[a-zA-Z0-9]+$"
+    "scss/at-mixin-pattern": "^[a-zA-Z0-9]+$",
+    "color-function-notation": null
   }
 }
