--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,6 +8,7 @@
     "selector-max-specificity": "0,4,0",
     "selector-class-pattern": "^[a-zA-Z0-9]*$",
     "scss/at-mixin-pattern": "^[a-zA-Z0-9]+$",
-    "color-function-notation": null
+    "color-function-notation": null,
+    "media-feature-range-notation": null
   }
 }
